logs/sqlcop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/memoized-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlcop'...
Listing './lib/python3.5/site-packages/sqlcop/checks'...
Compiling './lib/python3.5/site-packages/sqlcop/cli.py'...
***   File "./lib/python3.5/site-packages/sqlcop/cli.py", line 64
    print "FAILED - %s" % (message)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlcop-0.10.5.dist-info'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse-0.1.14.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
